- improved: CSS minifier by compressing single hex color from e.g. `#000000` to `#000`

- fixed: localization in `totaljs` executable script
- fixed: phone validation
- fixed: `DOWNLOAD()`
- fixed: `Number.VAT()` by Tomas Novak
- fixed: debugging mode in Node.js v14
- fixed: `ROUTE()` method, there was a problem with spaces `GET /*      `
- fixed: `ACTION()` with json output

======= 3.4.1

- added: `SchemaOptions.parent` returns a parent model
- added: Tangular template engine (experimental)
- added: `String.makeid()` for creating of unique identifier from string
- added: a new property called `message.ua` to `FLOWSTREAM()`

- updated: `HttpFile.fs()` by adding `id` argument for updating of existing file
- updated: default value for `allow_ssc_validation` to `true`

- fixed: `String.parseDate(format)` with defined format
- fixed: inheriting of controllers between schemas
- fixed: `MailMessage.attachments()`
- fixed: calling of `F.snapshotstats` in cache recycle
- fixed: `controller.success()`
- fixed: removing of unused files when a bundle is extracting
- fixed: a processor function in `F.backup()`

- improved: `Date.format()`
- improved: Total.js translate (supports ErrorBuilder and DBMS)

======= 3.4.0

- added: `date.setTimeZone(timezone)`
- added: `NOSQL('~absolute_path.nosql')' loads external NoSQL embedded database
- added: `TABLE('~absolute_path.nosql')' loads external Table
- added: `(generate)` subtype into the `config` files
- added: `String.isBase64()`
- added: new schema type `Base64`
- added: SchemaEntity supports `schema.addWorkflowExtension(name, fn($, [data]))`
- added: SchemaEntity supports `schema.addTransformExtension(name, fn($, [data]))`
- added: SchemaEntity supports `schema.addOperationExtension(name, fn($, [data]))`
- added: SchemaEntity supports `schema.addHookExtension(name, fn($, [data]))`
- added: SchemaEntity supports `schema.setSaveExtension(fn($, [data]))`
- added: SchemaEntity supports `schema.setReadExtension(fn($, [data]))`